Change font sizes; Fix alignment issues

--- a/src/style.css
+++ b/src/style.css
@@ -57,6 +57,7 @@ body {
     grid-template-columns: 1fr ;
     grid-template-rows: auto auto auto;
     justify-content: space-between;
+    align-content: space-evenly;
     color: var(--second-accent-color);
     grid-column: 1;
     padding: 1rem;
@@ -75,12 +76,13 @@ body {
 }
 
 .weather-location {
-    font-weight: bold;
-    font-size: 1.4rem;
+    font-weight: bolder;
+    font-size: 1.6rem;
 }
 
 .asOf {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
+    font-weight: 500;
 }
 
 .weather-content {
@@ -162,10 +164,11 @@ input {
 
 .forecast-container {
     display: flex;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     justify-content: space-around;
     text-align: center;
     gap: 10px;
+    height: 90%;
 }
 
 .timeofday {
@@ -189,6 +192,7 @@ input {
     overflow: hidden;
     gap: 10px;
     align-items: center;
+    justify-content: center;
 }
 
 .slide {
